<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_centerInParent="true"
                android:outlineAmbientShadowColor="@color/black"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#EAEAEA"
                    android:scaleType="centerInside"
                    android:src="@drawable/profile" />


            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="150dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/apresentacao2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apresentacao2"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/apresentacao1" />

            <TextView
                android:id="@+id/myname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/myname"
                android:textColor="@color/Azul"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/apresentacao1" />

            <TextView
                android:id="@+id/apresentacao1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apresentacao1"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/obrigado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Obrigado por baixar! 😎"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/apresentacao2"
                app:layout_constraintStart_toStartOf="@+id/apresentacao2"
                app:layout_constraintTop_toBottomOf="@id/apresentacao2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>